# cantor

./: .gitignore  AUTHORS  README.md  cantor.cabal  hpcMarkup.sh
src/: Datatypes.hs  Main.hs  Reader.hs  ReaderTest.hs  Token.hs  Translator.hs  TranslatorTest.hs
