name: cantor
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: PublicDomain
license-file: ""
description:
data-dir: ""

executable cantor
    build-depends: base -any,
                   QuickCheck >= 2.4.2,
                   parsec >= 3.1.2,
                   mtl >= 2.1.1,
                   indents >= 0.3.3
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src

test-suite test-cantor
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
