name:           cantor
version:        0.0.1
build-type:     Simple
license:        PublicDomain
license-file:   LICENSE
author:         Derek Thurn
maintainer:     Derek Thurn <derek@thurn.ca>
stability:      experimental
cabal-version:  >= 1.6


executable cantor
    main-is:        Main.hs
    buildable:      True
    ghc-options:    -fno-warn-unused-do-bind -threaded
    hs-source-dirs: src
    build-depends:  base >= 4.3,
                    QuickCheck >= 2.4, 
                    parsec >= 3.1,
                    mtl >= 2.0,
                    indents >= 0.3

test-suite test-cantor
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -fno-warn-unused-do-bind
    buildable:      True
    hs-source-dirs: src
    cpp-options:    -DMAIN_FUNCTION=testMain
    build-depends:  base >= 4.3,
                    QuickCheck >= 2.4, 
                    HUnit >= 1.2,
                    test-framework >= 0.4,
                    test-framework-hunit >= 0.2,
                    test-framework-quickcheck2 >= 0.2,
                    test-framework-th >= 0.2
